Darkened jumbotron text background - TODO: fix card alignment when searching

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -28,7 +28,7 @@
 }
 
 .transparent-black{
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0, 0.70);
 }
 
 
